--- a/config/config_example.toml
+++ b/config/config_example.toml
@@ -14,7 +14,11 @@ model = "claude-3-haiku-20240307" # you can change model here
 
 [app]
 API_KEY = "your_custom_key_for_auth"
-data_path = "./data" # you can change these 2 paths
+JWT_SECRET_KEY = "your_jwt_secret_key_should_be_long_and_random"
+DEFAULT_USERNAME = "admin"
+DEFAULT_PASSWORD = "password"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30 
+data_path = "./data"
 reports_path = "./reports"
 
 [server]
